[tool.poetry]
name = "chart-analyze"
version = "0.1.0"
description = ""
authors = ["Christian Pedersen <chripede@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.17.0"
pandas = "^1.5.2"
plotly = "^5.11.0"
scipy = "^1.10.0"
requests = "^2.28.2"
dateparser = "^1.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
